--- a/views/inventoryhistory/inventoryhistory.ejs
+++ b/views/inventoryhistory/inventoryhistory.ejs
@@ -1,57 +1,69 @@
 <div class="container-fluid">
-    <div class="card shadow mb-4 cardbody-size-710">
-        <div class="progress progress-sm mb-2">
-            <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
-                aria-valuemax="100">
-            </div>
-        </div>
-        <div class="card-header py-3 header-bg">
-            <div class="row">
-                <div class="col-md-4">
-                    <h6 class="mt-2 font-weight-bold table-title">Inventory History Reports:</h6>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card shadow mb-2">
+                <div class="progress progress-sm mb-2">
+                    <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
+                        aria-valuemax="100">
+                    </div>
                 </div>
-                <div class="col-md-8">
-                    <div class="row d-flex justify-content-end">
-                        <div class="col-9">
-                            <div class="input-group">
-                                <input autocomplete="off" type="text" class="form-control bg-light small"
-                                    placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2"
-                                    id="search-input">
-                                <div class="input-group-append">
-                                    <button class="btn sis-btn-color" type="button" id="search-button">
-                                        <i class="fas fa-search fa-sm"></i>
-                                    </button>
-                                </div>
-                            </div>
+                <div class="card-header py-3 header-bg">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h6 class="mt-2 font-weight-bold table-title">Inventory History Reports:</h6>
                         </div>
-                        <div class="col-3">
-                            <div class="row d-flex justify-content-center">
-                                <button class="btn btn-outline-inventory ml-2" id="export-button">
-                                    <i class="fas fa-download fa-sm"></i>
-                                </button>
+                        <div class="col-md-8">
+                            <div class="row d-flex justify-content-end">
+                                <div class="col-9">
+                                    <div class="input-group">
+                                        <input autocomplete="off" type="text" class="form-control bg-light small"
+                                            placeholder="Search for..." aria-label="Search"
+                                            aria-describedby="basic-addon2" id="search-input">
+                                        <div class="input-group-append">
+                                            <button class="btn sis-btn-color" type="button" id="search-button">
+                                                <i class="fas fa-search fa-sm"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-3">
+                                    <div class="row d-flex justify-content-center">
+                                        <button class="btn btn-outline-inventory ml-2" id="export-button">
+                                            <i class="fas fa-download fa-sm"></i>
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="card-body">
-            <div class="table-responsive scroll-cardbody-size-710 border">
-                <table class="table table-bordered custom-mobile-table" id="inventoryhistory-datatable" width="100%"
-                    cellspacing="10">
-                    <thead class="table-header">
-                        <tr>
-                            <th>History ID</th>
-                            <th>Product ID</th>
-                            <th>Quantity</th>
-                            <th>Type</th>
-                            <th>Created Date</th>
-                            <th>Created By</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="table-responsive scroll-cardbody-size-710 border">
+                            <table class="table table-bordered custom-mobile-table" id="inventoryhistory-datatable" width="100%"
+                                cellspacing="10">
+                                <thead class="table-header">
+                                    <tr>
+                                        <th class="text-left">ID</th>
+                                        <th class="text-left">Product</th>
+                                        <th class="text-left">Branch</th>
+                                        <th class="text-left">Quantity</th>
+                                        <th class="text-left">Type</th>
+                                        <th class="text-left">Date</th>
+                                        <th class="text-left">Stocks After</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="col-md-5"></div>
+                </div>
             </div>
         </div>
-    </div>
