--- a/views/stockadjustment/stockadjustment.ejs
+++ b/views/stockadjustment/stockadjustment.ejs
@@ -106,7 +106,7 @@
     </div>
     <!-- cardbody-size-710 -->
     <div class="card shadow mb-2">
-        <div class="progress progress-sm mb-2">
+        <div class="progress progress-sm">
             <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
             </div>
         </div>
