--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -312,18 +312,18 @@
     <div id="collapseHistory" class="collapse" aria-labelledby="headingTransactions" data-parent="#accordionSidebar">
       <div class="bg-options py-2 collapse-inner rounded">
         <h6 class="collapse-header">Contents:</h6>
-        <a class="collapse-item" href="/salesinventoryhistory">
+        <!-- <a class="collapse-item" href="/salesinventoryhistory">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Sales Inventory History</span>
-        </a>
+        </a> -->
         <a class="collapse-item" href="/inventoryhistory">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Inventory History</span>
         </a>
-        <a class="collapse-item" href="/productionhistory">
+        <!-- <a class="collapse-item" href="/productionhistory">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Production history</span>
-        </a>
+        </a> -->
         <a class="collapse-item" href="/systemlogs">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>System Logs</span>
