--- a/views/inventoryhistory/inventoryhistoryscripts.ejs
+++ b/views/inventoryhistory/inventoryhistoryscripts.ejs
@@ -1,13 +1,18 @@
 <script>
     $(document).ready(function () {
+        //#region Variables
         let movementId;
         let type;
         let branch; 
         let inventoryId;
+        //#endregion
+
+        Loadtable()
 
         //#region Loading
         const loader = `  
             <tr id="loading-state">
+                <td><div class="custom-loader"></div></td>
                 <td><div class="custom-loader"></div></td>
                 <td><div class="custom-loader"></div></td>
                 <td><div class="custom-loader"></div></td>
@@ -23,17 +28,12 @@
         }
         //#endregion
 
+        //#region Table Search and Click
         $("#search-input").on("input", function () {
             filterTableRows("#inventory-table", 7, "#search-input");
         });
 
         $('#inventory-table tbody').on('click', 'tr', function () {
-            const placeholder = `
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <span class="h5">Under Development</span>
-                    </div>
-                </div>`;
             const dataRow = [];
             $('#inventory-table tbody tr').removeClass('active-row');
             $(this).addClass('active-row');
@@ -42,26 +42,10 @@
                 dataRow.push($(this).text());
             });
             // console.log(dataRow);
-            branch = dataRow[2];
-            movementId = dataRow[7];
-            type = dataRow[8];
-            inventoryId = dataRow[9];
-
-            const historyDetails = $("#history-details");
-            historyDetails.empty();
-            historyDetails.append(placeholder);
-
-            $("#inventory-id-details").text(inventoryId);
-            $("#momvement-type").text(type);
-
-            if(type === "ADJUSTMENT"){
-                DisplayAdjustmentDetails(movementId);
-            }
-
         });
-        
-        Loadtable()
+        //#endregion
 
+        //#region Populate Table
         function populateinventoryhistorytable(data) {
             const tableBody = $('#inventory-table tbody');
             tableBody.empty();
@@ -86,6 +70,7 @@
                     const tr = $('<tr>').append(
                         $('<td>', { text: item.id, 'data-label': 'ID', class: 'custom-mobile-align text-left' }),
                         $('<td>', { text: item.productname, 'data-label': 'Product', class: 'custom-mobile-align text-left' }),
+                        $('<td>', { text: item.barcode, 'data-label': 'Barcode', class: 'custom-mobile-align text-left' }),
                         $('<td>', { text: `${item.branchname} (${item.branch})`, 'data-label': 'Branch', class: 'custom-mobile-align text-left' }),
                         $('<td>', { text: Math.abs(item.quantity), 'data-label': 'Branch ID', class: 'custom-mobile-align text-left' }),
                         $('<td>', { html: movementType, 'data-label': 'Type', class: 'custom-mobile-align text-left' }),
@@ -132,131 +117,8 @@
                 }
             });
         }
-
-        //#region Display Adjustment Details
-        DisplayAdjustmentDetails = (id) => {
-            let div = $("#history-details");
-            div.empty();
-            div.append(`<div class="row justify-content-center">
-                            <div class="col-md-auto">
-                                <span id="btnSpinner" class="spinner-border spinner-border" role="status" aria-hidden="true"></span>
-                            </div>
-                        </div>`);
-            $.ajax({
-                url: `/stockadjustment/${id}`,
-                method: 'GET',
-                success: function (data) {
-                    console.log(data);
-                    const details = data.data.details;
-                    const items = data.data.items;
-                    div.empty();
-
-                    const display =
-                        `<div class="row ml-2 mr-2">
-                            <div class="col-md-6">
-                                <span class="h5 label-title">
-                                    Adjustment ID:
-                                </span>
-                                <span>
-                                    <textarea class="form-control mt-1 w-100 text-capitalize"  id="adjustment-id" rows="1" readonly>${details[0].id}</textarea>
-                                </span>
-                            </div>
-                            <div class="col-md-6">
-                                <span class="h5 label-title">
-                                    Status:
-                                </span>
-                                <span>
-                                    <textarea class="form-control mt-1 w-100 text-capitalize"  id="adjustment-status" rows="1" readonly>${details[0].status}</textarea>
-                                </span>
-                            </div>
-                            <div class="col-md-12 mt-3">
-                                <span class="h5 label-title">
-                                    Reason:
-                                </span>
-                                <span>
-                                    <textarea class="form-control mt-1 w-100 text-capitalize"  id="adjustment-reason" rows="1" readonly>${details[0].reason}</textarea>
-                                </span>
-                            </div>
-                            <div class="col-md-12 mt-3">
-                                <span class="h5 label-title">
-                                    Products:
-                                </span>
-                                <div class="card mt-1">
-                                    <table class="table custom-mobile-table" id="adjustment-details-table"
-                                        width="100%" cellspacing="10">
-                                        <thead class="table-header">
-                                            <tr>
-                                                <th class="col-1 text-left h6">ID</th>
-                                                <th class="col-5 text-left h6">Product</th>
-                                                <th class="col-1 text-left h6">Quantity</th>
-                                                <th class="col-1 text-left h6">Stocks After</th>
-                                            </tr> 
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td colspan="5">Click Row to Display Adjustment Details</td>
-                                            </tr>
-                                        </tbody>
-                                        <tfoot>
-                                        </tfoot>
-                                    </table>
-                                </div>
-                            </div>
-                            <div class="col-md-12 mt-3">
-                                <span class="h5 label-title">
-                                    Details:
-                                </span>
-                                <span>
-                                    <textarea class="form-control mt-1 w-100"  id="adjustment-details" rows="3" readonly>${details[0].details}</textarea>
-                                </span>
-                            </div>
-                            <div class="col-md-12 mt-3">
-                                <span class="h5 label-title">
-                                    Notes:
-                                </span>
-                                <span>
-                                    <textarea class="form-control mt-1 w-100"  id="adjustment-notes" rows="3" readonly>${details[0].notes}</textarea>
-                                </span>
-                            </div>
-                        </div>`;
-                    div.append(display);
-
-                    populateAdjustmentItems(items, details[0].status)
-
-                },
-                error: function (xhr, status, error) {
-                    console.error(error);
-                }
-            });
-        }
-
-        populateAdjustmentItems = (data, status) => {
-            const tableBody = $('#adjustment-details-table tbody');
-            tableBody.empty();
-            let stocksAfter;
-            let quantityClass;
-            data.forEach(item => {
-                if(status === "PENDING"){
-                    stocksAfter = "Pending"
-                }else if(status === "CANCELLED"){
-                    stocksAfter = "Cancelled"
-                }else{
-                    stocksAfter = item.stockafter
-                }
-                if(item.quantity > 0){
-                    quantityClass = 'text-green';
-                }else{
-                    quantityClass = 'text-red';
-                }
-                const tr = $('<tr>').append(
-                    $('<td>', { text: item.productid, 'data-label': 'ID', class: 'custom-mobile-align text-left' }),
-                    $('<td>', { text: item.productname, 'data-label': 'Name', class: 'custom-mobile-align text-left' }),
-                    $('<td>', { html: `<span class=${quantityClass}>${item.quantity} </span>`, 'data-label': 'Quantity', class: 'custom-mobile-align text-left' }),
-                    $('<td>', { text: stocksAfter, 'data-label': 'Stocks After', class: 'custom-mobile-align text-left' }),
-                );
-                tableBody.append(tr);
-            });
-        }
         //#endregion
+
+       
     });
 </script>
